@@ -9,7 +9,7 @@ local cTest, nI, nJ, crlf := CHR(13)+CHR(10)
    OUTSTD (cStr)
    OUTSTD (UPPER (cStr))
    OUTSTD (LOWER (cStr))
-   OUTSTD (CHR (13) + CHR (10))
+   OUTSTD (crlf)
    OUTSTD (ASC (SUBSTR (cStr, 8)))
    OUTSTD (ASC (SUBSTR (cStr, 9)))
    OUTSTD (ASC (SUBSTR (cStr, 10)))
@@ -76,45 +76,40 @@ local cTest, nI, nJ, crlf := CHR(13)+CHR(10)
    OUTSTD (crlf)
 
    // Test the string comparison operators in the HVM.
-   OUTSTD ("EXACT ")
-   IF SET (_SET_EXACT)
-      OUTSTD ("ON")
-   ELSE
-      OUTSTD ("OFF")
-   ENDIF
-   StrTest ("ABC", "ABC")
-   StrTest ("ABC", "ABCD")
-   StrTest ("ABCD", "ABC")
-   StrTest ("ABC", "DEF")
-   StrTest ("ABC", "DEFG")
-   StrTest ("ABCD", "DEF")
+   // Note: SET (_SET_EXACT) defaults to .F.
+   TestStr ()
    OUTSTD (crlf)
    OUTSTD (crlf)
-   OUTSTD ("EXACT ")
-   
    SET (_SET_EXACT, .T.)
+   TestStr ()
+   OUTSTD (crlf)
+return nil
+
+function TestStr ()
+   OUTSTD ("EXACT ")
    IF SET (_SET_EXACT)
       OUTSTD ("ON")
    ELSE
       OUTSTD ("OFF")
    ENDIF
+   StrTest ("ABC", "")
+   StrTest ("ABC", " ")
    StrTest ("ABC", "ABC")
    StrTest ("ABC", "ABCD")
-   StrTest ("ABCD", "ABC")
+   StrTest ("ABC", "ABC ")
    StrTest ("ABC", "DEF")
    StrTest ("ABC", "DEFG")
    StrTest ("ABCD", "DEF")
-   OUTSTD (crlf)
-   OUTSTD (crlf)
 return nil
 
 function StrTest (Str1, Str2)
 
    OUTSTD (CHR(13)+CHR(10)+CHR(10))
+   OUTSTD ("'")
    OUTSTD (Str1)
-   OUTSTD (", ")
+   OUTSTD ("', '")
    OUTSTD (Str2)
-   OUTSTD (" == ")
+   OUTSTD ("' == ")
    OUTSTD (Str1 == Str2)
    OUTSTD (" = ")
    OUTSTD (Str1 = Str2)
@@ -130,10 +125,11 @@ function StrTest (Str1, Str2)
    OUTSTD (Str1 >= Str2)
 
    OUTSTD (CHR(13)+CHR(10))
+   OUTSTD ("'")
    OUTSTD (Str2)
-   OUTSTD (", ")
+   OUTSTD ("', '")
    OUTSTD (Str1)
-   OUTSTD (" == ")
+   OUTSTD ("' == ")
    OUTSTD (Str2 == Str1)
    OUTSTD (" = ")
    OUTSTD (Str2 = Str1)
